fix ui spacing

--- a/code/UI/globals.scss
+++ b/code/UI/globals.scss
@@ -70,6 +70,7 @@ button {
   background: radial-gradient(rgba(10, 26, 40, 1) 0%,rgba(5, 20, 38, 1) 100%);
   padding-top: 12vh;
   align-items: center;
+  justify-content: space-between;
   flex-direction: column;
   font-weight: bold;
   pointer-events: all;
